--- a/Index.html
+++ b/Index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portifólio</title>
+    <title>Portifólio</title>
     <!--CSS-->
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/header.css">
     <link rel="stylesheet" href="CSS/main.css">
-    <!--FONTS-->
     <!--FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,12 +37,12 @@
                     <h2> 🙋‍♂️ Sobre Mim</h2>
                     <p>
                        Sou Eduardo, tenho 21 anos e moro em Santo André.
-                        Trabalho desde os 15 anos, mas minha primeira experiência profissional foi como mecânico automotivo em um concessionário Hyundai,
+                        Trabalho desde os 15 anos e minha primeira experiência profissional foi como mecânico automotivo em um concessionário Hyundai,
                         que teve início no dia 16 de agosto de 2021!<br/>
-                        Iniciei minha graduação em Análise e Desenvolvimento de Sistemas em agosto de 2022, atualmente estou no segundo semestre e
-                        Estagiando desde o primeiro, adquiri experiência com o ambiente de escritório e me adaptei à nova rotina e realidade que esta mudança traz.<br/>
+                        Iniciei minha graduação em Análise e Desenvolvimento de Sistemas em agosto de 2022 e atualmente estou no segundo semestre,
+                        estagiando desde o primeiro adquiri experiência com o ambiente corporativo e me adaptei à nova rotina e realidade que esta mudança traz.<br/>
                         Com o estágio focado em suporte de TI, pude aprimorar minha comunicação e resiliência, com muitos desafios diários e, nos momentos apropriados
-                        mantenho meu foco nos estudos de Desenvolvimento de softwares, bem como uso de novas tecnologias.<br/>
+                        mantenho meu foco nos estudos de desenvolvimento de softwares, bem como uso de novas tecnologias.<br/>
                         Aos 18 anos, fui convocado a servir o exército, e ao contrário da maioria, recebi a oportunidade de mente e braços abertos. 
                         Sempre com muita dedicação, pude absorver muita experiência e conhecimentos que não são encontrados fora da instituição militar.
                         Foi uma experiência de auto-aprimoramento inesquecível, e jamais vou deixar de praticar o que aprendi por lá.<br/>
@@ -67,6 +66,18 @@
                         </div>
                         <div class="card">
                             <img src="Images/Flutter.png" alt="Logo do Flutter">
+                        </div>
+                        <div class="card">
+                            <img src="Images/Github.png" alt="Logo do Flutter">
+                        </div>
+                        <div class="card">
+                            <img src="Images/GIT.png" alt="Logo do Flutter">
+                        </div>
+                        <div class="card">
+                            <img src="Images/CPP.png" alt="Logo do Flutter">
+                        </div>
+                        <div class="card">
+                            <img src="Images/Postman.png" alt="Logo do Flutter">
                         </div>
                     </div>
                 </aside>
