atualização de informações

--- a/Index.html
+++ b/Index.html
@@ -52,31 +52,31 @@
                 <aside class="tecnologia">
                     <h2>👨‍💻 Tecnologias</h2>
                     <div class="cardContainer">
-                        <div class="card">
+                        <div class="card" title="CSS">
                             <img src="Images/CSS.png" alt="Logo do CSS">
                         </div>
-                        <div class="card">
+                        <div class="card" title="HTML">
                             <img src="Images/HTML.png" alt="Logo do HTML">
                         </div>
-                        <div class="card">
+                        <div class="card" title="JavaScirpt">
                             <img src="Images/JavaScirpt.png" alt="Logo do JavaScript">
                         </div>
-                        <div class="card">
+                        <div class="card" title="Dart">
                             <img src="Images/Dart.png" alt="Logo do Dart">
                         </div>
-                        <div class="card">
+                        <div class="card" title="Flutter">
                             <img src="Images/Flutter.png" alt="Logo do Flutter">
                         </div>
-                        <div class="card">
+                        <div class="card" title="GitHub">
                             <img src="Images/Github.png" alt="Logo do Flutter">
                         </div>
-                        <div class="card">
+                        <div class="card" title="GIT">
                             <img src="Images/GIT.png" alt="Logo do Flutter">
                         </div>
-                        <div class="card">
+                        <div class="card" title="CPP">
                             <img src="Images/CPP.png" alt="Logo do Flutter">
                         </div>
-                        <div class="card">
+                        <div class="card" title="POSTMAN">
                             <img src="Images/Postman.png" alt="Logo do Flutter">
                         </div>
                     </div>
