--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/header.css">
     <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="CSS/responsive.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!--FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +20,7 @@
 
 </head>
 <body>
+   
     <header>
        <h1> Dev.EduardoSávio </h1>
     
@@ -30,8 +33,7 @@
         </a>
     </nav>
     </header>
-    <main>
-       
+    <main> 
             <section class="mainContent">
                 <article class="text">
                     <h2> 🙋‍♂️ Sobre Mim</h2>
@@ -88,5 +90,6 @@
             &copy; Eduardo Sávio Pepinelli, 2023.
         </span>
     </footer>
+   
 </body>
 </html>
