--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +11,8 @@
     <link rel="stylesheet" href="CSS/header.css">
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="CSS/responsive.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!--FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,77 +21,100 @@
     <script src="https://kit.fontawesome.com/46556ddf08.js" crossorigin="anonymous"></script>
 
 </head>
+
 <body>
-   
+
     <header>
-       <h1> Dev.EduardoSávio </h1>
-    
-    <nav>
-        <a href="https://github.com/EduardoPepinelli" target="blank">
-            <i class="fa-brands fa-github"></i>
-        </a>
-        <a href="https://br.linkedin.com/in/eduardo-s%C3%A1vio-pepinelli-3525701a0" target="blank">
-            <i class="fa-brands fa-linkedin"></i>
-        </a>
-    </nav>
+        <h1> Dev.EduardoSávio </h1>
+
+        <nav>
+            <a href="https://github.com/EduardoPepinelli" target="blank">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://br.linkedin.com/in/eduardo-s%C3%A1vio-pepinelli-3525701a0" target="blank">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+        </nav>
     </header>
-    <main> 
-            <section class="mainContent">
-                <article class="text">
+    <main>
+        <section class="mainContent">
+                <div class="div">
                     <h2> 🙋‍♂️ Sobre Mim</h2>
-                    <p>
-                       Sou Eduardo, tenho 21 anos e moro em Santo André.
-                        Trabalho desde os 15 anos e minha primeira experiência profissional foi como mecânico automotivo em um concessionário Hyundai,
-                        que teve início no dia 16 de agosto de 2021!<br/>
-                        Iniciei minha graduação em Análise e Desenvolvimento de Sistemas em agosto de 2022 e atualmente estou no segundo semestre,
-                        estagiando desde o primeiro adquiri experiência com o ambiente corporativo e me adaptei à nova rotina e realidade que esta mudança traz.<br/>
-                        Com o estágio focado em suporte de TI, pude aprimorar minha comunicação e resiliência, com muitos desafios diários e, nos momentos apropriados
-                        mantenho meu foco nos estudos de desenvolvimento de softwares, bem como uso de novas tecnologias.<br/>
-                        Aos 18 anos, fui convocado a servir o exército, e ao contrário da maioria, recebi a oportunidade de mente e braços abertos. 
-                        Sempre com muita dedicação, pude absorver muita experiência e conhecimentos que não são encontrados fora da instituição militar.
-                        Foi uma experiência de auto-aprimoramento inesquecível, e jamais vou deixar de praticar o que aprendi por lá.<br/>
-                        "Justiça e Disciplina".
-                    </p> 
-                </article>
-                <aside class="tecnologia">
-                    <h2>👨‍💻 Tecnologias</h2>
-                    <div class="cardContainer">
-                        <div class="card" title="CSS">
-                            <img src="Images/CSS.png" alt="Logo do CSS">
-                        </div>
-                        <div class="card" title="HTML">
-                            <img src="Images/HTML.png" alt="Logo do HTML">
-                        </div>
-                        <div class="card" title="JavaScirpt">
-                            <img src="Images/JavaScirpt.png" alt="Logo do JavaScript">
-                        </div>
-                        <div class="card" title="Dart">
-                            <img src="Images/Dart.png" alt="Logo do Dart">
-                        </div>
-                        <div class="card" title="Flutter">
-                            <img src="Images/Flutter.png" alt="Logo do Flutter">
-                        </div>
-                        <div class="card" title="GitHub">
-                            <img src="Images/Github.png" alt="Logo do Flutter">
-                        </div>
-                        <div class="card" title="GIT">
-                            <img src="Images/GIT.png" alt="Logo do Flutter">
-                        </div>
-                        <div class="card" title="CPP">
-                            <img src="Images/CPP.png" alt="Logo do Flutter">
-                        </div>
-                        <div class="card" title="POSTMAN">
-                            <img src="Images/Postman.png" alt="Logo do Flutter">
-                        </div>
+                    <div class="flexContainer"> 
+                        <article class="text">
+                            <p>
+                                Sou Eduardo, tenho 21 anos e moro em Santo André.
+                                Trabalho desde os 15 anos e meu primeiro emprego registrado foi como mecânico
+                                automotivo em um concessionário Hyundai,
+                                que teve início no dia 16 de agosto de 2021!<br />
+                                Iniciei minha graduação em Análise e Desenvolvimento de Sistemas em agosto de 2022 e
+                                atualmente estou no segundo semestre,
+                                estagiando desde o primeiro adquiri experiência com o ambiente corporativo e me adaptei
+                                à nova rotina e realidade que esta mudança traz.<br />
+                                Com o estágio focado em suporte de TI, pude aprimorar minha comunicação e resiliência,
+                                com muitos desafios diários e, nos momentos apropriados
+                                mantenho meu foco nos estudos de desenvolvimento de softwares, bem como uso de novas
+                                tecnologias.<br />
+                                Aos 18 anos, fui convocado a servir o exército, e ao contrário da maioria, recebi a
+                                oportunidade de mente e braços abertos.
+                                Sempre com muita dedicação, pude absorver muita experiência e conhecimentos que não são
+                                encontrados fora da instituição militar.
+                                Foi uma experiência de auto-aprimoramento inesquecível, e jamais vou deixar de praticar
+                                o que aprendi por lá.<br />
+                                "Justiça e Disciplina".
+                            </p>
+                        </article>
+                    <div class="photoContainer">
+                        <center>
+                        <img src="Images/Perfil.png" class="photo">
+                    <article class="nameImg">
+                        <p>
+                            Eduardo Sávio Pepinelli
+                        </p>
+                    </article>
+                    </center>
                     </div>
-                </aside>
-            </section>
+                </div>
+            <aside class="tecnologia">
+                <h2>👨‍💻 Tecnologias</h2>
+                <div class="cardContainer">
+                    <div class="card" title="CSS">
+                        <img src="Images/CSS.png" alt="Logo do CSS">
+                    </div>
+                    <div class="card" title="HTML">
+                        <img src="Images/HTML.png" alt="Logo do HTML">
+                    </div>
+                    <div class="card" title="JavaScirpt">
+                        <img src="Images/JavaScirpt.png" alt="Logo do JavaScript">
+                    </div>
+                    <div class="card" title="Dart">
+                        <img src="Images/Dart.png" alt="Logo do Dart">
+                    </div>
+                    <div class="card" title="Flutter">
+                        <img src="Images/Flutter.png" alt="Logo do Flutter">
+                    </div>
+                    <div class="card" title="GitHub">
+                        <img src="Images/Github.png" alt="Logo do Flutter">
+                    </div>
+                    <div class="card" title="GIT">
+                        <img src="Images/GIT.png" alt="Logo do Flutter">
+                    </div>
+                    <div class="card" title="CPP">
+                        <img src="Images/CPP.png" alt="Logo do Flutter">
+                    </div>
+                    <div class="card" title="POSTMAN">
+                        <img src="Images/Postman.png" alt="Logo do Flutter">
+                    </div>
+                </div>
+            </aside>
+        </section>
     </main>
     <footer>
         <span>
             &copy; Eduardo Sávio Pepinelli, 2023.
         </span>
     </footer>
-   
+
 </body>
+
 </html>
